add accessibility service

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,4 +27,15 @@
         android:text="Start Service"
         />
 
+    <Button
+        android:id="@+id/enableServiceBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/startBtn"
+        android:layout_marginTop="20dp"
+        android:text="Enable Accessibility Service"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
